# einvoice-bridge

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.sqlx/: query-04d807e827a96a21d25cb96406a8e15a6f1bf21989950a09f0ed9a0a84f76ccb.json  query-08a3f8ee859bb0f979f9cc0a079ce89c8acfe7cbdac6b140b6eebe410b036cb4.json  query-151599ef6ec181ddebc93b4bf1fd5c6cde1e0307e946667d685aca7d71836c81.json  query-1d62b258a385df107b53b1522a45572f0d3ba8195ab9494045e9caae09d4d7f2.json  query-314e648b5f203fdd727c275e3ee3e60ab495c1e6fcb99dcbff3a2ca27460ff66.json  query-5f15626467ef31f26c96f89234afebbfe8b89fc1d3124e8f4bb1c7cb30a142ef.json  query-6ecb323531d314df6232cd7913aa54b7964f46d7df1b4454ae4fe4a4cea22b10.json  query-76c63d0b950f21001ed611bcc106d82f64f2bf49d39216b48f17e9d9d48e3d86.json  query-7fb1306594e702bd3de95368835ec81daa2261f26732b5024bd0ba611f09f8a7.json  query-8a188eb52cb379c589f2cdd77431e9bd6c3a8e25c90ebb2716e0080a89fa94cd.json  query-8f3d85c5b3ce491063154f91b9658e614b6eea2dee0b7e21705dfa2588079c5e.json  query-8f7109af3a00e6ab9eff160be0deefd920387ba8cb3c064c4537b1bc998f0bbc.json  query-926af0f278a8401ef01423090bdccaa652e3b0e990961536554e503d28301e44.json  query-a94cb7d37a4193e3edd191d07a0be2063764b29cba9ae9b724e0763cd5ddccc9.json  query-af8a2995d629f7dafa91b7fbfaa23aa749bf0130c7128afb2780c3da98fddc41.json  query-b727f8e33be9b6101479ff2fc65c80368d0b37ba9dc6696f0769967e48948eac.json  query-b95aa95adf9f1783c76541733f7e97c1909f80f5daa60f458e238c9e401f5764.json  query-bacb88517774c55e5000023a30292e0d7eace1904f60b89abc473857bede73a0.json  query-bc54b5e3b9c70c4fea5c4011d43cb3451f2a7a120c230937d4e7dc5cc800456e.json  query-c0ace24cc869c5c1336f577f7c41682393af79b216ef551e6597ad4b6d832b75.json  query-cbbc47f57d95fb0589950c9ae905343ed209c52c5d4b142f7bd2668b79eccec0.json  query-cccc2c40aac2090ae5c44a5c7ecd3abcd505231e377e81767694e036e050a013.json  query-d500854062986857d2947a676ca2501be7875e928645752378dc23baef6bd927.json  query-e945766da2d2cbcf4385cd5e10e71d63876478c31763c56fdccd1fcd405cb7c4.json  query-f4c828c3ace1a003283837e6a574f17f75164848907781c5974ab72ba09f0264.json  query-f70ac4f97e2ea90d0fe4d3cfb550414a7cd15935390c898fa299f2e71cf90b34.json  query-f8ed033f87d7fbc089ae2e9c415506e568dbec67b14ce55b68fa856139f42d56.json
crates/adapters/: Cargo.toml
crates/adapters/src/: api.rs  lhdn.rs  lib.rs  repo.rs  worker.rs
crates/adapters/src/lhdn/: client.rs  error.rs  models.rs  oauth.rs  token_repo.rs
crates/adapters/src/worker/: canceller.rs  mod.rs  poller.rs  submitter.rs
crates/adapters/tests/: api.rs  canceller.rs  lhdn.rs  poller.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: canonicalize.rs  digest.rs  lib.rs  signer.rs  ubl.rs
migrations/: 0001_init.sql  0002_cancellation_reason.sql
samples/: invoice-001.json
