[package]
name = "einvoice-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
einvoice-domain = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

reqwest = { workspace = true }
sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
# Needed for tests that build an ephemeral RSA key + Signer.
rsa = { workspace = true }
rand = "0.8"
