[package]
name = "einvoice-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
rsa = { workspace = true }
p12 = { workspace = true }
base64 = { workspace = true }
quick-xml = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Used to generate an ephemeral RSA key inside tests so we don't have to
# bake a real .p12 into the repo.
rand = "0.8"
